--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 </<html>
 <body>
 <h2>Hello World!</h2>
+<a href="http://localhost:8081/ProyectoWeb/formulario"> Crear alumno </a>
 </body>
 </html>
